# pytest-pymysql-autorecord

./: .buildinfo  LICENSE  README.md  api.html  development.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  requirements-dev.txt  search.html  searchindex.js  setup.cfg
.doctrees/: development.doctree  index.doctree  quickstart.doctree
_modules/: index.html
_modules/pytest_pymysql_autorecord/: util.html
_modules/pytest_pymysql_snapshot_mock/: util.html
_sources/: development.md.txt
docs/: api.md  conf.py  development.md  index.md  quickstart.md
src/pytest_pymysql_autorecord/: connect.py  plugin.py  util.py
src/pytest_pymysql_snapshot_mock/: __init__.py  connect.py  plugin.py  util.py
tests/: test_dummy.py
