[metadata]
name = pytest-pymysql-snapshot-mock
version = attr: pytest_pymysql_snapshot_mock.__version__
description = Mock PyMySQL with snapshots.
long_description = file: README.md
long_description_content_type: text/markdown
url = https://github.com/saltastroops/pytest-pymysql-snapshot-mock
author = Southern African Large Telescope (SALT)
author_email = salthelp@salt.ac.za
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    pymysql>=1.0.2
    pytest>=5.1.0
    pytest-datadir>=1.3.1

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
pytest11 =
    pytest_pymysql_snapshot_mock = pytest_pymysql_snapshot_mock.plugin

# ----
# mypy
# ----

[mypy]
strict = True
python_version = 3.7
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True

[mypy-pymysql.protocol.*]
ignore_missing_imports = True

# ------
# flake8
# ------

[flake8]
max-line-length = 88
docstring-convention = numpy
ignore =
    # flake8
    W503  # line break before binary operator
    # pycodestyle
    D100  # missing docstring in public module
    D104  # missing docstring in public package

# ------
# pytest
# ------

[tool:pytest]
testpaths = tests
addopts = --strict-markers
xfail_strict = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/ppsm

# ---
# tox
# ---

[tox:tox]
envlist = ["3.7", "3.8", "3.9", "3.10"]
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs:--cov --strict-markers}

[testenv:typecheck]
deps =
    mypy
    types-PyMySQL
commands =
    mypy {posargs:src}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:imports]
skip_install = True
deps =
    isort
commands =
    isort {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-docstrings
    flake8-print
commands =
    flake8 {posargs:src tests}

[testenv:docs]
skip_install = True
deps =
    sphinx
    sphinx-autodoc-typehints
    sphinx-book-theme
    myst-nb
commands =
    sphinx-build -W -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html

